--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.8.1",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   },
@@ -61,6 +61,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.31",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.6",
