--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ ACCESS_TOKEN_SECRET=asmdlamslkdmalksdm
 REFRESH_TOKEN_SECRET=aslmlmdslmalsdkmjfnajksdnjkas
 ACCESS_TOKEN_EXPIRY=2592000
 
+BACKEND_URL=http://localhost:3000
 
 # Mail Config
 MAIL_MAILER=smtp
