--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.7",
+    "json-bigint": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.0",
     "passport": "^0.6.0",
@@ -61,6 +62,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/json-bigint": "^1.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.31",
     "@types/nodemailer": "^6.4.4",
