--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.0",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
