--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "json-bigint": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.0",
+    "openai": "^4.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
