--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.32.6",
     "stripe": "^13.5.0",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
