--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "google-auth-library": "^9.0.0",
     "handlebars": "^4.7.7",
     "json-bigint": "^1.0.0",
     "multer": "^1.4.5-lts.1",
