--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.7.1",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
