--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,23 @@
-DEMO_MODE=demo
-API_SECRET=fdjsbfkjdsfjkdskjf
-DB_NAME=Database Name
-DB_USERNAME=Database Username
-DB_PASSWORD=Database Password
+DB_NAME=codex_ai
+DB_USERNAME=root
+DB_PASSWORD=password
 DB_HOST=localhost
-DB_PORT=5432
-DB_SCHEMA=public
-DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=${DB_SCHEMA}
+DB_PORT=3306
+DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+# mysql://db_user:password@localhost:3306/db_name
 JWT_SIGNATURE=theSuperSecretKey
 FRONTEND_URL=http://localhost:3001
 PORT=3000
 ACCESS_TOKEN_SECRET=asmdlamslkdmalksdm
 REFRESH_TOKEN_SECRET=aslmlmdslmalsdkmjfnajksdnjkas
-ACCESS_TOKEN_EXPIRY=2592000
+ACCESS_TOKEN_EXPIRY=50d
+
+API_SECRET=fdjsbfkjdsfjkdskjf
 
 BACKEND_URL=http://localhost:3000
+
+
+
 
 # Mail Config
 MAIL_MAILER=smtp
