--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:push": "npx prisma db push",
     "prisma:seed": "npx prisma db seed",
-    "prisma:generate": "npx prisma generate"
+    "prisma:generate": "npx prisma generate",
+    "prisma:deploy": "npm run prisma:migrate && npm run prisma:push && npm run prisma:generate"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
