--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "^4.7.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
+    "braintree": "^3.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
