--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "^4.7.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "braintree": "^3.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -45,10 +46,13 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "ffmpeg-static": "^5.2.0",
     "google-auth-library": "^9.0.0",
     "handlebars": "^4.7.7",
     "json-bigint": "^1.0.0",
+    "lamejs": "^1.2.1",
     "multer": "^1.4.5-lts.1",
+    "node-lame": "^1.3.2",
     "nodemailer": "^6.7.0",
     "openai": "^4.0.0",
     "passport": "^0.6.0",
