--- a/package.json
+++ b/package.json
@@ -47,12 +47,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^9.0.0",
     "handlebars": "^4.7.7",
     "json-bigint": "^1.0.0",
-    "lamejs": "^1.2.1",
     "multer": "^1.4.5-lts.1",
-    "node-lame": "^1.3.2",
     "nodemailer": "^6.7.0",
     "openai": "^4.0.0",
     "passport": "^0.6.0",
