--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma-exclude": "^1.0.2",
+    "razorpay": "^2.9.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.1",
