--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.7.1",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -51,6 +53,7 @@
     "json-bigint": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.0",
+    "nodemailer-express-handlebars": "^6.1.0",
     "openai": "^4.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
