--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express-handlebars": "^6.0.0",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "braintree": "^3.17.0",
